--- a/Django_Checkbook/Checkbook/templates/checkbook/CreateNewAccount.html
+++ b/Django_Checkbook/Checkbook/templates/checkbook/CreateNewAccount.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<h3>CREATE NEW ACCOUNT</h3>
 	<div id="account-form">
-		<form mehtod="POST">
+		<form method="POST">
 			{% csrf_token %}
 			{{form.as_p}}
 			<button id="new-account-button" type="submit" name="Save_Account">Create Account</button>
